create Event in front and back

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGO_URL=mongodb://127.0.0.1:27017/events
 PORT=4000
 TOKEN_SECRET=rd9VzUk7
 COOKIE_SECRET=rd9VzGZ9
+CLOUDINARY_API_KEY=769474651237466
+CLOUDINARY_API_SECRET=OtmUwub6_LvhIvenHkCxz4IPwmI
