--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URL=mongodb://127.0.0.1:27017/events
+MONGO_PRODUCTION=mongodb+srv://events:Ss3236113@events.hk32cov.mongodb.net/?retryWrites=true&w=majority
 PORT=4000
 TOKEN_SECRET=rd9VzUk7
 COOKIE_SECRET=rd9VzGZ9
