--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "server": "nodemon server.js",
     "client": "cd client && npm run dev",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\"  \"npm run client\" "
+    "dev": "concurrently --kill-others-on-fail \"npm run server\"  \"npm run client\" ",
+    "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
